--- a/draw-concrete-jungle-in-matplotlib.ipynb
+++ b/draw-concrete-jungle-in-matplotlib.ipynb
@@ -29,7 +29,7 @@
    "id": "824cd47d",
    "metadata": {},
    "source": [
-    "<img src = 'input/draw-buldings-and-house-in-matplotlib/concrete-jungle.png' />"
+    "<img src = 'concrete-jungle.png' />"
    ]
   },
   {
